objects/SVMXC__Sub_Location__c.object
<CustomObject>
    <description>Sub location is a unique information that identifies an address in a given location. Sub location information is beneficial in service scenarios when accurate information about the physical sub location of a product is crucial to the timely delivery of service. A sub location should always be used in the context of a location.</description>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to which this sub location belongs to. Note that you can maintain your own organization’s sub locations in which case you will create an Account record for your account.</description>
        <inlineHelpText>The company to which this sub location belongs to. Note that you can maintain your own organization’s sub locations in which case you will create an Account record for your company</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the sub location address</description>
        <inlineHelpText>“City” part of the sub location address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the sub location’s address</description>
        <inlineHelpText>“Country” part of the sub location’s address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Email__c</fullName>
        <description>Location Email</description>
        <inlineHelpText>Location Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Fax__c</fullName>
        <description>Main fax number for the sub location if available</description>
        <inlineHelpText>Main fax number for the sub location if available</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Sub Locations</relationshipLabel>
        <relationshipName>Sub_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the parent sub location</description>
        <label>Parent</label>
        <referenceTo>SVMXC__Sub_Location__c</referenceTo>
        <relationshipLabel>Sub Locations</relationshipLabel>
        <relationshipName>Sub_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Phone__c</fullName>
        <description>Main phone number for the sub location if available</description>
        <inlineHelpText>Main phone number for the sub location if available</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State/Province” part of the sub location’s address</description>
        <inlineHelpText>“State/Province” part of the sub location’s address</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the sub location’s address</description>
        <inlineHelpText>“Street” part of the sub location’s address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Web_site__c</fullName>
        <description>Website URL for the sub location if available. Use the company&apos;s website otherwise</description>
        <inlineHelpText>Website URL for the sub location if available. Use the company&apos;s website otherwise</inlineHelpText>
        <label>Web site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip/Postal code” part of the sub location’s address</description>
        <inlineHelpText>“Zip/Postal code” part of the sub location’s address</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sub Location</label>
    <nameField>
        <label>Sub Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>